# northwind-powerbi-to-streamlit

./: README.md  main.py  pyproject.toml  research.md
data/: order_details_fact.csv  product_dim.csv  suppliers_dim.csv
scripts/: analyze_postgres.py  extract_postgres.py  load_snowflake.py  verify_data.py
streamlit_app/: app.py  data_loader.py
